# social-money-network

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  relationalai-0.1-py2.py3-none-any.whl
notebooks/: Extra Questions.ipynb  PyRel Social Money Network.ipynb  Scratch.ipynb  Snowflake.ipynb  Social Money Network.ipynb  accounts.csv  config.py  transactions.csv
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  accounts-checkpoint.csv  transactions-checkpoint.csv
