[project]
name = "social-money-network"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Samuel S. Watson", email = "samuel.s.watson@gmail.com" }
]
dependencies = [
    "snowflake-connector-python[pandas]>=3.7.0",
    "jupyterlab>=4.1.1",
    "packaging>=23.2",
    "networkx>=3.2.1",
    "gravis>=0.1.0",
    "numpy>=1.26.4",
    "itables>=1.7.0",
    "faker>=23.2.0",
    "pip>=24.0",
    "rich>=13.7.0",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[project.scripts]
hello = "social_money_network:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/social_money_network"]
